aks-deployment-mcaps/ingress-with-cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://aksciliumkv.vault.azure.net/certificates/aks-ingress-cer
  name: store-front
  namespace: aks-store
spec:
  ingressClassName: nginx-internal
  rules:
  - host: store-front.private.vinay.com
    http:
      paths:
      - backend:
          service:
            name: store-front
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - store-front.private.vinay.com
    secretName: keyvault-store-front
